tests/negative/semantic/polymorphism_wrong_type/input.ci
structure Animal {
    string name = "animal";
}

structure Dog : Animal {
    string name = "dog";
}

structure Car {
    string brand = "car";
}

void main() {
    Animal a = clone Dog;
    a = clone Car;
}
